# benchmarks

./: CMakeLists.txt  README.md  benchmarks-linux.yml  benchmarks-win.yml
.github/scripts/: extract_cppcheck_errors.py  extract_cppcheck_errors.sh
.github/workflows/: cppcheck.yml  unit_tests.yml  unit_tests_linux.yml  unit_tests_windows.yml
code/: CMakeLists.txt
code/inc/: benchmarks.h
code/src/: benchmarks.cpp  main.cpp
code/test/: BenchmarksPerformanceTest.cpp  BenchmarksTest.cpp  CMakeLists.txt  benchmarkstest.h
config/CMake/: Bootstrap.cmake  CPackCommon.cmake  CommonSetup.cmake  CppCheckSetup.cmake  CppCheck_Suppressions.txt.in  FindCxxTest.cmake  FindGTest.cmake  LinuxSetup.cmake  MSVCSetup.cmake
config/windows/: command-prompt.bat.in  thirdpartypaths_conda.bat.in  visual-studio.bat.in  visual-studio_conda.bat.in
